feat: upd data for 2 weeks

--- a/notebooks/arb_distribution_airdrop.ipynb
+++ b/notebooks/arb_distribution_airdrop.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -41,15 +41,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-11T17:11:21.074167Z",
-     "start_time": "2023-09-11T17:11:21.045790Z"
+     "end_time": "2023-09-11T17:23:27.153759Z",
+     "start_time": "2023-09-11T17:23:27.131103Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "outputs": [],
+   "execution_count": 53,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collected data for dates: 2023-08-31 00:00:00 - 2023-09-14 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "from datetime import datetime\n",
@@ -67,12 +75,13 @@
     "# Start date and end date are the following: start date is always previous Thursday 00:00 UTC, end date is always this Thursday 00:00 UTC:\n",
     "today = datetime.today()\n",
     "# Calculate days until previous Thursday (0 = Monday, 3 = Thursday)\n",
-    "days_until_previous_thursday = (today.weekday() - 3) % 7\n",
+    "# Calculate days until thursday that was 2 weeks ago\n",
+    "days_until_thursday_two_weeks_ago = (today.weekday() - 3) % 7 + 7\n",
     "# Calculate start date by subtracting days_until_previous_thursday and setting time to 00:00\n",
-    "start_date = today - timedelta(days=days_until_previous_thursday, hours=today.hour, minutes=today.minute,\n",
+    "start_date = today - timedelta(days=days_until_thursday_two_weeks_ago, hours=today.hour, minutes=today.minute,\n",
     "                               seconds=today.second, microseconds=today.microsecond)\n",
     "# Calculate end date by adding 7 days to the start date\n",
-    "end_date = start_date + timedelta(days=7)\n",
+    "end_date = start_date + timedelta(days=14)\n",
     "\n",
     "start_ts = int(start_date.timestamp())\n",
     "end_ts = int(end_date.timestamp())\n",
@@ -101,13 +110,15 @@
     "    return all_pools\n",
     "\n",
     "\n",
-    "pool_snapshots = get_balancer_pool_snapshots()"
+    "pool_snapshots = get_balancer_pool_snapshots()\n",
+    "\n",
+    "print(f\"Collected data for dates: {start_date} - {end_date}\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-11T17:11:24.689662Z",
-     "start_time": "2023-09-11T17:11:21.061299Z"
+     "end_time": "2023-09-11T17:23:34.795466Z",
+     "start_time": "2023-09-11T17:23:27.145447Z"
     }
    }
   },
@@ -122,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "outputs": [
     {
      "name": "stdout",
@@ -146,8 +157,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-11T17:11:24.701301Z",
-     "start_time": "2023-09-11T17:11:24.691781Z"
+     "end_time": "2023-09-11T17:23:34.796193Z",
+     "start_time": "2023-09-11T17:23:34.784107Z"
     }
    }
   },
@@ -162,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "import os\n",
@@ -232,14 +243,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-11T17:11:25.311553Z",
-     "start_time": "2023-09-11T17:11:24.705091Z"
+     "end_time": "2023-09-11T17:23:35.474955Z",
+     "start_time": "2023-09-11T17:23:34.800490Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
@@ -267,8 +278,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-11T17:11:31.160749Z",
-     "start_time": "2023-09-11T17:11:25.312487Z"
+     "end_time": "2023-09-11T17:23:41.281514Z",
+     "start_time": "2023-09-11T17:23:35.478006Z"
     }
    }
   },
@@ -283,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "outputs": [
     {
      "name": "stdout",
@@ -296,7 +307,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>recipientGaugeAddr</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n      <th>withBonus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>1.429436</td>\n      <td>13000.000000</td>\n      <td>20.000000</td>\n      <td>1.756283</td>\n      <td>1.75</td>\n      <td>1.006283</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xd6B875d62c2661eaB66472F36c672e4B512f1135</td>\n      <td>0xadE4A71BB62bEc25154CFc7e6ff49A513B491E81</td>\n      <td>rETH-WETH-BPT</td>\n      <td>1.114994</td>\n      <td>9650.310499</td>\n      <td>14.846632</td>\n      <td>1.752986</td>\n      <td>1.75</td>\n      <td>1.002986</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.652602</td>\n      <td>6500.000000</td>\n      <td>10.000000</td>\n      <td>2.581322</td>\n      <td>1.50</td>\n      <td>2.081322</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>1.101573</td>\n      <td>6500.000000</td>\n      <td>10.000000</td>\n      <td>1.000707</td>\n      <td>1.00</td>\n      <td>1.000707</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.821735</td>\n      <td>6500.000000</td>\n      <td>10.000000</td>\n      <td>1.005988</td>\n      <td>1.00</td>\n      <td>1.005988</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x260cbb867359a1084eC97de4157d06ca74e89415</td>\n      <td>0x9791d590788598535278552EEcD4b211bFc790CB</td>\n      <td>wstETH-WETH-BPT</td>\n      <td>0.599859</td>\n      <td>4956.281597</td>\n      <td>7.625049</td>\n      <td>1.772596</td>\n      <td>1.75</td>\n      <td>1.022596</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.472302</td>\n      <td>4537.048311</td>\n      <td>6.980074</td>\n      <td>1.757850</td>\n      <td>1.75</td>\n      <td>1.007850</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.424272</td>\n      <td>4275.652247</td>\n      <td>6.577927</td>\n      <td>1.009661</td>\n      <td>1.00</td>\n      <td>1.009661</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x8F0B53F3BA19Ee31C0A73a6F6D84106340fadf5f</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.310358</td>\n      <td>3239.471177</td>\n      <td>4.983802</td>\n      <td>2.345962</td>\n      <td>1.00</td>\n      <td>2.345962</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xa14453084318277b11d38FbE05D857A4f647442B</td>\n      <td>0x423A1323c871aBC9d89EB06855bF5347048Fc4A5</td>\n      <td>4POOL-BPT</td>\n      <td>0.282116</td>\n      <td>12471.389525</td>\n      <td>3.802138</td>\n      <td>1.007338</td>\n      <td>1.00</td>\n      <td>1.007338</td>\n      <td>10%</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.226508</td>\n      <td>2315.854784</td>\n      <td>3.562854</td>\n      <td>1.024159</td>\n      <td>1.00</td>\n      <td>1.024159</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.093374</td>\n      <td>916.483209</td>\n      <td>1.409974</td>\n      <td>1.000219</td>\n      <td>1.00</td>\n      <td>1.000219</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.013163</td>\n      <td>137.508651</td>\n      <td>0.211552</td>\n      <td>718.485203</td>\n      <td>1.00</td>\n      <td>718.485203</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>recipientGaugeAddr</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n      <th>withBonus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>1.429452</td>\n      <td>13000.000000</td>\n      <td>20.000000</td>\n      <td>1.756303</td>\n      <td>1.75</td>\n      <td>1.006303</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xd6B875d62c2661eaB66472F36c672e4B512f1135</td>\n      <td>0xadE4A71BB62bEc25154CFc7e6ff49A513B491E81</td>\n      <td>rETH-WETH-BPT</td>\n      <td>1.115000</td>\n      <td>9647.469521</td>\n      <td>14.842261</td>\n      <td>1.752995</td>\n      <td>1.75</td>\n      <td>1.002995</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.656098</td>\n      <td>6500.000000</td>\n      <td>10.000000</td>\n      <td>2.584724</td>\n      <td>1.50</td>\n      <td>2.084724</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>1.101575</td>\n      <td>6500.000000</td>\n      <td>10.000000</td>\n      <td>1.000709</td>\n      <td>1.00</td>\n      <td>1.000709</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.821751</td>\n      <td>6500.000000</td>\n      <td>10.000000</td>\n      <td>1.006006</td>\n      <td>1.00</td>\n      <td>1.006006</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x260cbb867359a1084eC97de4157d06ca74e89415</td>\n      <td>0x9791d590788598535278552EEcD4b211bFc790CB</td>\n      <td>wstETH-WETH-BPT</td>\n      <td>0.599883</td>\n      <td>4954.926688</td>\n      <td>7.622964</td>\n      <td>1.772667</td>\n      <td>1.75</td>\n      <td>1.022667</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.472309</td>\n      <td>4536.257521</td>\n      <td>6.978858</td>\n      <td>1.757874</td>\n      <td>1.75</td>\n      <td>1.007874</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.424314</td>\n      <td>4275.529207</td>\n      <td>6.577737</td>\n      <td>1.009762</td>\n      <td>1.00</td>\n      <td>1.009762</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x8F0B53F3BA19Ee31C0A73a6F6D84106340fadf5f</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.310918</td>\n      <td>3245.074716</td>\n      <td>4.992423</td>\n      <td>2.350194</td>\n      <td>1.00</td>\n      <td>2.350194</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xa14453084318277b11d38FbE05D857A4f647442B</td>\n      <td>0x423A1323c871aBC9d89EB06855bF5347048Fc4A5</td>\n      <td>4POOL-BPT</td>\n      <td>0.282122</td>\n      <td>12470.713938</td>\n      <td>3.801098</td>\n      <td>1.007361</td>\n      <td>1.00</td>\n      <td>1.007361</td>\n      <td>10%</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.226525</td>\n      <td>2315.744797</td>\n      <td>3.562684</td>\n      <td>1.024235</td>\n      <td>1.00</td>\n      <td>1.024235</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.093374</td>\n      <td>916.352961</td>\n      <td>1.409774</td>\n      <td>1.000219</td>\n      <td>1.00</td>\n      <td>1.000219</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.013204</td>\n      <td>137.930651</td>\n      <td>0.212201</td>\n      <td>720.741446</td>\n      <td>1.00</td>\n      <td>720.741446</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -395,8 +406,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-11T17:11:37.293013Z",
-     "start_time": "2023-09-11T17:11:31.148286Z"
+     "end_time": "2023-09-11T17:23:46.650403Z",
+     "start_time": "2023-09-11T17:23:41.289557Z"
     }
    }
   },
@@ -411,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "outputs": [],
    "source": [
     "# Export to csv\n",
@@ -441,8 +452,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-11T17:11:37.304345Z",
-     "start_time": "2023-09-11T17:11:37.290965Z"
+     "end_time": "2023-09-11T17:23:46.656353Z",
+     "start_time": "2023-09-11T17:23:46.649095Z"
     }
    }
   }
