chore: add dates

--- a/notebooks/arb_distribution_airdrop.ipynb
+++ b/notebooks/arb_distribution_airdrop.ipynb
@@ -334,7 +334,7 @@
     "# Calculate total weight\n",
     "total_weight = sum([gauge['voteWeight'] for gauge in arb_gauges.values()])\n",
     "arb_gauge_distributions = {\n",
-    "    \n",
+    "\n",
     "}\n",
     "for gauge_addr, gauge_data in arb_gauges.items():\n",
     "    # Calculate distribution based on vote weight and total weight\n",
@@ -391,7 +391,6 @@
     "\n",
     "recur_distribute_unspend_arb()\n",
     "\n",
-    "\n",
     "print(\n",
     "    f\"Unspent arb: {ARBITRUM_TO_DISTRIBUTE - sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])}\")\n",
     "print(f\"Arb distributed: {sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])}\")\n",
@@ -424,11 +423,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "# Export to csv\n",
-    "arb_gauge_distributions_df.to_csv('../output/arb_airdrop/arb_airdrop.csv', index=False)\n",
+    "arb_gauge_distributions_df.to_csv(f'../output/arb_airdrop/arb_airdrop_{start_date.date()}_{end_date.date()}.csv',\n",
+    "                                  index=False)\n",
     "\n",
     "# Dump into output.json using:\n",
     "with open('../data/output_tx_template.json') as f:\n",
@@ -443,19 +443,20 @@
     "        tx['contractInputsValues'][\n",
     "            'gaugeAddresses'] = f\"[{','.join([gauge['recipientGaugeAddr'] for gauge in gauge_distributions])}]\"\n",
     "        # Inject vote weights:\n",
-    "        tx['contractInputsValues']['amountsPerPeriod'] = f\"[{','.join([str(int(gauge['distribution'] * 1e18)) for gauge in gauge_distributions])}]\"\n",
+    "        tx['contractInputsValues'][\n",
+    "            'amountsPerPeriod'] = f\"[{','.join([str(int(gauge['distribution'] * 1e18)) for gauge in gauge_distributions])}]\"\n",
     "        tx['contractInputsValues']['maxPeriods'] = f\"[{','.join(['2' for gauge in gauge_distributions])}]\"\n",
     "        break\n",
     "\n",
     "# Dump back to arb_distribution_for_msig.json\n",
-    "with open('../output/arb_airdrop/arb_airdrop.json', 'w') as f:\n",
+    "with open(f'../output/arb_airdrop/arb_airdrop_{start_date.date()}_{end_date.date()}.json', 'w') as f:\n",
     "    json.dump(output_data, f, indent=4)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-11T17:31:48.569081Z",
-     "start_time": "2023-09-11T17:31:48.564217Z"
+     "end_time": "2023-09-11T17:35:54.452448Z",
+     "start_time": "2023-09-11T17:35:54.441507Z"
     }
    }
   }
