--- a/notebooks/airdrop_arb_distribution/airdrop.ipynb
+++ b/notebooks/airdrop_arb_distribution/airdrop.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -41,14 +41,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-12T11:14:21.444741Z",
-     "start_time": "2023-09-12T11:14:21.442556Z"
+     "end_time": "2023-09-13T11:06:43.680580Z",
+     "start_time": "2023-09-13T11:06:43.657597Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
@@ -119,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-12T11:14:28.871430Z",
-     "start_time": "2023-09-12T11:14:21.448660Z"
+     "end_time": "2023-09-13T11:06:50.887781Z",
+     "start_time": "2023-09-13T11:06:43.672287Z"
     }
    }
   },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
@@ -148,7 +148,7 @@
    "source": [
     "current_year = 2023\n",
     "emissions_per_week = 0\n",
-    "with open('../data/emissionsPerYear.json') as f:\n",
+    "with open('../../data/emissionsPerYear.json') as f:\n",
     "    data = json.load(f)\n",
     "for item in data['data']:\n",
     "    if item['year'] == str(current_year):\n",
@@ -159,8 +159,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-12T11:14:28.871801Z",
-     "start_time": "2023-09-12T11:14:28.863951Z"
+     "end_time": "2023-09-13T11:06:50.895271Z",
+     "start_time": "2023-09-13T11:06:50.882890Z"
     }
    }
   },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "import os\n",
@@ -226,7 +226,7 @@
     "boost_data = {}\n",
     "cap_override_data = {}\n",
     "# Before, load boost data from the file\n",
-    "with open('../data/arbitrumGrantGuageMetadata.json') as f:\n",
+    "with open('../../data/arbitrumGrantGuageMetadata.json') as f:\n",
     "    boosties = json.load(f)\n",
     "    for boost in boosties:\n",
     "        boost_data[boost['gaugeAddress']] = boost.get('fixedBoost', 1)\n",
@@ -245,14 +245,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-12T11:14:29.760736Z",
-     "start_time": "2023-09-12T11:14:28.875743Z"
+     "end_time": "2023-09-13T11:06:51.188735Z",
+     "start_time": "2023-09-13T11:06:50.889517Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
@@ -280,8 +280,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-12T11:14:35.616725Z",
-     "start_time": "2023-09-12T11:14:29.761198Z"
+     "end_time": "2023-09-13T11:06:56.545988Z",
+     "start_time": "2023-09-13T11:06:51.192476Z"
     }
    }
   },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
@@ -309,7 +309,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>recipientGaugeAddr</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n      <th>withBonus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>1.428588</td>\n      <td>13347.368525</td>\n      <td>19.067669</td>\n      <td>1.755242</td>\n      <td>1.75</td>\n      <td>1.005242</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xd6B875d62c2661eaB66472F36c672e4B512f1135</td>\n      <td>0xadE4A71BB62bEc25154CFc7e6ff49A513B491E81</td>\n      <td>rETH-WETH-BPT</td>\n      <td>1.114392</td>\n      <td>9783.655509</td>\n      <td>13.976651</td>\n      <td>1.752040</td>\n      <td>1.75</td>\n      <td>1.002040</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.615996</td>\n      <td>8000.000000</td>\n      <td>11.428571</td>\n      <td>2.545700</td>\n      <td>1.50</td>\n      <td>2.045700</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>1.101360</td>\n      <td>8000.000000</td>\n      <td>11.428571</td>\n      <td>1.000513</td>\n      <td>1.00</td>\n      <td>1.000513</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.821078</td>\n      <td>8000.000000</td>\n      <td>11.428571</td>\n      <td>1.005183</td>\n      <td>1.00</td>\n      <td>1.005183</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x260cbb867359a1084eC97de4157d06ca74e89415</td>\n      <td>0x9791d590788598535278552EEcD4b211bFc790CB</td>\n      <td>wstETH-WETH-BPT</td>\n      <td>0.597311</td>\n      <td>5080.802152</td>\n      <td>7.258289</td>\n      <td>1.765068</td>\n      <td>1.75</td>\n      <td>1.015068</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.471475</td>\n      <td>4488.279312</td>\n      <td>6.411828</td>\n      <td>1.754770</td>\n      <td>1.75</td>\n      <td>1.004770</td>\n      <td>20%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.424110</td>\n      <td>4283.151700</td>\n      <td>6.118788</td>\n      <td>1.009277</td>\n      <td>1.00</td>\n      <td>1.009277</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x8F0B53F3BA19Ee31C0A73a6F6D84106340fadf5f</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.304630</td>\n      <td>3159.105275</td>\n      <td>4.513008</td>\n      <td>2.302659</td>\n      <td>1.00</td>\n      <td>2.302659</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xa14453084318277b11d38FbE05D857A4f647442B</td>\n      <td>0x423A1323c871aBC9d89EB06855bF5347048Fc4A5</td>\n      <td>4POOL-BPT</td>\n      <td>0.281753</td>\n      <td>12494.088643</td>\n      <td>3.562984</td>\n      <td>1.006043</td>\n      <td>1.00</td>\n      <td>1.006043</td>\n      <td>10%</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.226273</td>\n      <td>2310.496582</td>\n      <td>3.300709</td>\n      <td>1.023097</td>\n      <td>1.00</td>\n      <td>1.023097</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.093369</td>\n      <td>924.127774</td>\n      <td>1.320183</td>\n      <td>1.000166</td>\n      <td>1.00</td>\n      <td>1.000166</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.012424</td>\n      <td>128.924527</td>\n      <td>0.184178</td>\n      <td>678.184082</td>\n      <td>1.00</td>\n      <td>678.184082</td>\n      <td>10%</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>recipientGaugeAddr</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n      <th>bonus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>1.428668</td>\n      <td>14413.113197</td>\n      <td>20.590162</td>\n      <td>1.755340</td>\n      <td>1.75</td>\n      <td>1.005340</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xd6B875d62c2661eaB66472F36c672e4B512f1135</td>\n      <td>0xadE4A71BB62bEc25154CFc7e6ff49A513B491E81</td>\n      <td>rETH-WETH-BPT</td>\n      <td>1.114417</td>\n      <td>10392.273881</td>\n      <td>14.846106</td>\n      <td>1.752078</td>\n      <td>1.75</td>\n      <td>1.002078</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.636144</td>\n      <td>8000.000000</td>\n      <td>11.428571</td>\n      <td>2.565307</td>\n      <td>1.50</td>\n      <td>2.065307</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>1.101371</td>\n      <td>8000.000000</td>\n      <td>11.428571</td>\n      <td>1.000523</td>\n      <td>1.00</td>\n      <td>1.000523</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.821157</td>\n      <td>8000.000000</td>\n      <td>11.428571</td>\n      <td>1.005280</td>\n      <td>1.00</td>\n      <td>1.005280</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x260cbb867359a1084eC97de4157d06ca74e89415</td>\n      <td>0x9791d590788598535278552EEcD4b211bFc790CB</td>\n      <td>wstETH-WETH-BPT</td>\n      <td>0.597407</td>\n      <td>5355.885428</td>\n      <td>7.651265</td>\n      <td>1.765351</td>\n      <td>1.75</td>\n      <td>1.015351</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.471499</td>\n      <td>4870.639303</td>\n      <td>6.958056</td>\n      <td>1.754860</td>\n      <td>1.75</td>\n      <td>1.004860</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.424183</td>\n      <td>4654.868607</td>\n      <td>6.649812</td>\n      <td>1.009451</td>\n      <td>1.00</td>\n      <td>1.009451</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xa14453084318277b11d38FbE05D857A4f647442B</td>\n      <td>0x423A1323c871aBC9d89EB06855bF5347048Fc4A5</td>\n      <td>4POOL-BPT</td>\n      <td>0.281785</td>\n      <td>12654.825063</td>\n      <td>3.792607</td>\n      <td>1.006157</td>\n      <td>1.00</td>\n      <td>1.006157</td>\n      <td>10%</td>\n      <td>10000</td>\n    </tr>\n    <tr>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.226369</td>\n      <td>2517.917157</td>\n      <td>3.597025</td>\n      <td>1.023530</td>\n      <td>1.00</td>\n      <td>1.023530</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.093369</td>\n      <td>999.587770</td>\n      <td>1.427983</td>\n      <td>1.000169</td>\n      <td>1.00</td>\n      <td>1.000169</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.012657</td>\n      <td>140.889593</td>\n      <td>0.201271</td>\n      <td>690.881283</td>\n      <td>1.00</td>\n      <td>690.881283</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -359,7 +359,7 @@
     "        'staticBoost': boost_data.get(gauge_addr, 1),\n",
     "        'dynamicBoost': dynamic_boosts.get(gauge_addr, 1),\n",
     "        'cap': f\"{cap_override_data.get(gauge_addr, VOTE_CAP_IN_PERCENT)}%\",\n",
-    "        'withBonus': False\n",
+    "        'bonus': 0\n",
     "    }\n",
     "\n",
     "\n",
@@ -400,7 +400,7 @@
     "                           gauge['distribution'] > 0}\n",
     "# Toss in bonus arb to the predefined gauge:\n",
     "arb_gauge_distributions[ARB_ROOT_GAUGE]['distribution'] += ARBITRUM_TO_USD_POOL\n",
-    "arb_gauge_distributions[ARB_ROOT_GAUGE]['withBonus'] = True\n",
+    "arb_gauge_distributions[ARB_ROOT_GAUGE]['bonus'] = ARBITRUM_TO_USD_POOL\n",
     "arb_gauge_distributions_df = pd.DataFrame.from_dict(arb_gauge_distributions, orient='index')\n",
     "arb_gauge_distributions_df = arb_gauge_distributions_df.sort_values(by='%distribution', ascending=False)\n",
     "display(HTML(arb_gauge_distributions_df.to_html(index=False)))"
@@ -408,8 +408,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-12T11:14:41.794123Z",
-     "start_time": "2023-09-12T11:14:35.628285Z"
+     "end_time": "2023-09-13T11:07:02.177258Z",
+     "start_time": "2023-09-13T11:06:56.554487Z"
     }
    }
   },
@@ -424,20 +424,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "# Export to csv\n",
-    "arb_gauge_distributions_df.to_csv(f'../output/arb_airdrop/arb_airdrop_{start_date.date()}_{end_date.date()}.csv',\n",
+    "arb_gauge_distributions_df.to_csv(f'./output/arb_airdrop_{start_date.date()}_{end_date.date()}.csv',\n",
     "                                  index=False)\n",
     "\n",
     "# Dump into output.json using:\n",
-    "with open('../data/output_tx_template.json') as f:\n",
+    "with open('../../data/output_tx_template.json') as f:\n",
     "    output_data = json.load(f)\n",
     "\n",
     "# Find transaction with func name `setRecipientList` and dump gauge \n",
     "gauge_distributions = arb_gauge_distributions.values()\n",
-    "assert sum([gauge['distribution'] for gauge in gauge_distributions]) == ARBITRUM_TO_DISTRIBUTE + ARBITRUM_TO_USD_POOL\n",
+    "assert int(sum([gauge['distribution'] for gauge in gauge_distributions])) == ARBITRUM_TO_DISTRIBUTE + ARBITRUM_TO_USD_POOL\n",
     "for tx in output_data['transactions']:\n",
     "    if tx['contractMethod']['name'] == 'setRecipientList':\n",
     "        # Inject list of gauges addresses:\n",
@@ -450,14 +450,14 @@
     "        break\n",
     "\n",
     "# Dump back to arb_distribution_for_msig.json\n",
-    "with open(f'../output/arb_airdrop/arb_airdrop_{start_date.date()}_{end_date.date()}.json', 'w') as f:\n",
+    "with open(f'./output/arb_airdrop_{start_date.date()}_{end_date.date()}.json', 'w') as f:\n",
     "    json.dump(output_data, f, indent=4)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-12T11:14:41.799664Z",
-     "start_time": "2023-09-12T11:14:41.791753Z"
+     "end_time": "2023-09-13T11:07:02.185866Z",
+     "start_time": "2023-09-13T11:07:02.172895Z"
     }
    }
   }
